--- a/src/epub/text/prologue.xhtml
+++ b/src/epub/text/prologue.xhtml
@@ -16,9 +16,10 @@
 		<hr/>
 		<p>The inimitable stories of Tong-king never have any real ending, and this one, being in his most elevated style, has even less end than most of them. But the whole narrative is permeated with the odour of joss-sticks and honourable high-mindedness, and the two characters are both of noble birth.</p>
 		<p>—THE WALLET OF KAI-LUNG</p>
-		<p><span style="font-variant:small-caps;">Wimsey,</span>Peter Death Bredon, D.S.O.; bom 1890, 2nd son of Mortimer Gerald Bredon Wimsey,</p>
+		<p><b>Wimsey,</b> Peter Death Bredon, D.S.O.; born 1890, 2nd son of Mortimer Gerald Bredon Wimsey,</p>
 		<p>15th Duke of Denver, and of Honoria Lucasta, daughter of Francis Delagardie of Bellingham Manor, Hants.</p>
-		<p><em>Educated:</em> Eton College and Balliol College, Oxford (1st class honours, Sch. of Mod. Hist. 1912); served with H. M. Forces ¹⁹¹⁴⁄₁₈ (Major, Rifle Brigade). <em>Author of:</em> “Notes on the Collecting of Incunabula,” “The Murderer’s Vade-Mecum,” etc.</p>
+		<p><em>Educated:</em> Eton College and Balliol College, Oxford (1st class honours, Sch. of Mod. Hist. 1912); served with H. M. Forces ¹⁹¹⁴⁄₁₈ (Major, Rifle Brigade). <em>Author of:</em> “Notes on the Collecting of Incunabula,”</p>
+		<p>“The Murderer’s Vade-Mecum,” etc.</p>
 		<p><em>Recreations:</em> Criminology; bibliophily; music; cricket.</p>
 		<p><em>Clubs:</em> Marlborough; Egotists’. <em>Residences:</em> 110A Piccadilly, W.; Bredon Hall, Duke’s Denver, Norfolk.</p>
 		<p><em>Arms:</em> Sable, 3 mice courant, argent; crest, a domestic cat couched as to spring, proper; motto: As my Whimsy takes me.</p>
