--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -27,6 +27,9 @@
 				<li id="note-6" epub:type="endnote">
 					<p>For Report of the procedure see House of Lords Journal for the dates in question. <a href="1.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
+				<li id="note-7" epub:type="endnote">
+					<p>This is a mistake by the author. It should read “Sir Wigmore”. <cite>—SE Editor</cite> <a href="1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
