--- a/src/epub/text/introduction.xhtml
+++ b/src/epub/text/introduction.xhtml
@@ -7,14 +7,13 @@
 	</head>
 	<body epub:type="frontmatter z3998:fiction">
 		<section id="introduction" epub:type="introduction">
-		<p>
-		The Solution of<br/>
-		the Riddlesdale Mystery<br/>
-		with a Report of the Trial of<br/>
-		the Duke of Denver<br/>
-		before the House of Lords<br/>
-		for<br/>
-		Murder</p>
+			<p>The Solution of<br/>
+			the Riddlesdale Mystery<br/>
+			with a Report of the Trial of<br/>
+			the Duke of Denver<br/>
+			before the House of Lords<br/>
+			for<br/>
+			Murder</p>
 		</section>
 	</body>
 </html>
