--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,78 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/introduction.xhtml">Introduction</a>
+				</li>
+				<li>
+					<a href="text/epigraph.xhtml">Epigraph</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Clouds of Witness</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Of His Malice Aforethought</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: The Green-Eyed Cat</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Mudstains and Bloodstains</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: —And His Daughter Much-Afraid</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Rue <abbr>St.</abbr> Honoré and the Rue De La Paix</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Mary Quite Contrary</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Club and the Bullet</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: <abbr>Mr.</abbr> Parker Takes Notes</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Goyles</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Nothing Abides at the Noon</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Meribah</a>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Alibi</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Manon</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The Edge of the Axe Towards Him</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: Bar Falling</a>
+						</li>
+						<li>
+							<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: The Second String</a>
+						</li>
+						<li>
+							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Eloquent Dead</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Speech for the Defense</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Who Goes Home?</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +99,13 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Clouds of Witness</a>
 				</li>
 				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
 				</li>
 			</ol>
 		</nav>
