Fixed various lint errors

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -19,16 +19,16 @@
 					<p>Verbatim. <a href="chapter-1.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p>Antimony? The Duchess appears to have had <abbr>Dr.</abbr> Pritchard’s case in mind. <a href="1.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>Antimony? The Duchess appears to have had <abbr>Dr.</abbr> Pritchard’s case in mind. <a href="chapter-6.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
-					<p>The Lord Chancellor held the appointment on this occasion as usual. <a href="1.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+					<p>The Lord Chancellor held the appointment on this occasion as usual. <a href="chapter-14.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-6" epub:type="endnote">
-					<p>For Report of the procedure see House of Lords Journal for the dates in question. <a href="1.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+					<p>For Report of the procedure see House of Lords Journal for the dates in question. <a href="chapter-14.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-7" epub:type="endnote">
-					<p>This is a mistake by the author. It should read “Sir Wigmore”. <cite>—SE Editor</cite> <a href="1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
+					<p>This is a mistake by the author. It should read “Sir Wigmore.” <cite>—SE Editor</cite> <a href="chapter-14.xhtml#noteref-7" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
