--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -9,7 +9,9 @@
 		<section id="epigraph" epub:type="epigraph">
 			<blockquote>
 				<p>The inimitable stories of Tong-king never have any real ending, and this one, being in his most elevated style, has even less end than most of them. But the whole narrative is permeated with the odour of joss-sticks and honourable high-mindedness, and the two characters are both of noble birth.</p>
-				<cite>—<i epub:type="se:name.publication.book">The Wallet of Kai-Lung</i></cite>
+				<cite>
+					<i epub:type="se:name.publication.book">The Wallet of Kai-Lung</i>
+				</cite>
 			</blockquote>
 		</section>
 	</body>
