--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -35,7 +35,7 @@
 							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: —And His Daughter Much-Afraid</a>
 						</li>
 						<li>
-							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Rue <abbr>St.</abbr> Honoré and the Rue De La Paix</a>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Rue <abbr>St.</abbr> Honoré and the Rue de la Paix</a>
 						</li>
 						<li>
 							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Mary Quite Contrary</a>
