--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -11,10 +11,14 @@
 				<h2 epub:type="title">List of Illustrations</h2>
 				<ol>
 					<li>
-						<a href="../text/chapter-1.xhtml#illustration-1">First or ground-floor plan of Riddlesdale Lodge.</a>
+						<p>
+							<a href="chapter-1.xhtml#illustration-1">First or ground-floor plan of Riddlesdale Lodge.</a>
+						</p>
 					</li>
 					<li>
-						<a href="../text/chapter-1.xhtml#illustration-2">Second-floor plan of Riddlesdale Lodge.</a>
+						<p>
+							<a href="chapter-1.xhtml#illustration-2">Second-floor plan of Riddlesdale Lodge.</a>
+						</p>
 					</li>
 				</ol>
 			</nav>
