Added fictional "Who's Who" entry as prologue.

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -23,6 +23,9 @@
 					<a href="text/halftitlepage.xhtml">Clouds of Witness</a>
 					<ol>
 						<li>
+							<a href="text/prologue.xhtml">Prologue</a>
+						</li>
+						<li>
 							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Of His Malice Aforethought</a>
 						</li>
 						<li>
@@ -99,7 +102,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Clouds of Witness</a>
+					<a href="text/prologue.xhtml" epub:type="bodymatter">Clouds of Witness</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
