--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -28,7 +28,7 @@
 					<p>For Report of the procedure see House of Lords Journal for the dates in question. <a href="chapter-14.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-7" epub:type="endnote">
-					<p>This is a mistake by the author. It should read “Sir Wigmore.” <cite>—SE Editor</cite> <a href="chapter-14.xhtml#noteref-7" epub:type="backlink">↩</a></p>
+					<p>This is a mistake by the author. It should read “Sir Wigmore.” <cite>—⁠SE Editor</cite> <a href="chapter-14.xhtml#noteref-7" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
