--- a/src/epub/text/introduction.xhtml
+++ b/src/epub/text/introduction.xhtml
@@ -8,12 +8,12 @@
 	<body epub:type="frontmatter z3998:fiction">
 		<section id="introduction" epub:type="introduction">
 			<p>The Solution of<br/>
-			the Riddlesdale Mystery<br/>
+			<b>the Riddlesdale Mystery</b><br/>
 			with a Report of the Trial of<br/>
-			the Duke of Denver<br/>
+			<b>the Duke of Denver</b><br/>
 			before the House of Lords<br/>
 			for<br/>
-			Murder</p>
+			<b>Murder</b></p>
 		</section>
 	</body>
 </html>
