--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Clouds of Witness</i><br/>
-			was published in 1925 by<br/>
+			was published in 1926 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Dorothy_L._Sayers">Dorothy <abbr epub:type="z3998:given-name">L.</abbr> Sayers</a>.</p>
 			<p>This ebook was transcribed and produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
@@ -23,7 +23,7 @@
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Right Honourable the Earl of Birkenhead</i>,<br/>
 			a painting completed in 1922 by<br/>
-			<b>George Hall Neale</b>.<br/>
+			<b epub:type="z3998:personal-name">George Hall Neale</b>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
