Add z3998:name-title semantic to some abbreviations

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -10,16 +10,16 @@
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
 				<li id="note-1" epub:type="endnote">
-					<p>This report, though substantially the same as that read by Lord Peter in <i epub:type="se:name.publication.newspaper">The Times</i>, has been corrected, amplified and annotated from the shorthand report made at the time by <abbr>Mr.</abbr> Parker. <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+					<p>This report, though substantially the same as that read by Lord Peter in <i epub:type="se:name.publication.newspaper">The Times</i>, has been corrected, amplified and annotated from the shorthand report made at the time by <abbr epub:type="z3998:name-title">Mr.</abbr> Parker. <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>From the newspaper report⁠—not <abbr>Mr.</abbr> Parker. <a href="chapter-1.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>From the newspaper report⁠—not <abbr epub:type="z3998:name-title">Mr.</abbr> Parker. <a href="chapter-1.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
 					<p>Verbatim. <a href="chapter-1.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p>Antimony? The Duchess appears to have had <abbr>Dr.</abbr> Pritchard’s case in mind. <a href="chapter-6.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>Antimony? The Duchess appears to have had <abbr epub:type="z3998:name-title">Dr.</abbr> Pritchard’s case in mind. <a href="chapter-6.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
 					<p>The Lord Chancellor held the appointment on this occasion as usual. <a href="chapter-14.xhtml#noteref-5" epub:type="backlink">↩</a></p>
