--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -47,7 +47,7 @@
 							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Club and the Bullet</a>
 						</li>
 						<li>
-							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: <abbr>Mr.</abbr> Parker Takes Notes</a>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Parker Takes Notes</a>
 						</li>
 						<li>
 							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Goyles</a>
