Remove unnecessary LoI section element
Per https://standardebooks.org/manual/1.8.0/7-high-level-structural-patterns#7.9
the <nav> should be directly nested under the <body>.

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -6,22 +6,20 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="backmatter">
-		<section id="loi" epub:type="loi">
-			<nav epub:type="loi">
-				<h2 epub:type="title">List of Illustrations</h2>
-				<ol>
-					<li>
-						<p>
-							<a href="chapter-1.xhtml#illustration-1">First or ground-floor plan of Riddlesdale Lodge.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-1.xhtml#illustration-2">Second-floor plan of Riddlesdale Lodge.</a>
-						</p>
-					</li>
-				</ol>
-			</nav>
-		</section>
+		<nav id="loi" epub:type="loi">
+			<h2 epub:type="title">List of Illustrations</h2>
+			<ol>
+				<li>
+					<p>
+						<a href="chapter-1.xhtml#illustration-1">First or ground-floor plan of Riddlesdale Lodge.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-1.xhtml#illustration-2">Second-floor plan of Riddlesdale Lodge.</a>
+					</p>
+				</li>
+			</ol>
+		</nav>
 	</body>
 </html>
